--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "ShiftLeft Scan is a free commercial-grade security tool for modern DevOps teams",
     "author": "ShiftLeft Inc",
     "license": "UNLICENSED",
-    "version": "0.1.0",
+    "version": "0.1.3",
     "publisher": "ShiftLeftSecurity",
     "homepage": "https://shiftleft.io",
     "repository": {
@@ -77,7 +77,7 @@
                 "shiftleft-scan.disableTelemetry": {
                     "type": "boolean",
                     "default": false,
-                    "description": "Disable scan telemetry. This is used for diagnostics and feature prioritization purposes."
+                    "description": "Disable scan telemetry. Telemetry is used for diagnostics and feature prioritization purposes."
                 },
                 "shiftleft-scan.scanMode": {
                     "type": "string",
@@ -177,12 +177,20 @@
             {
                 "command": "extension.shiftleft.PerformScan",
                 "title": "Security Scan",
-                "category": "ShiftLeft"
+                "category": "ShiftLeft",
+                "icon": {
+                    "light": "./menu-logo.svg",
+                    "dark": "./menu-logo.svg"
+                }
             },
             {
                 "command": "extension.shiftleft.LaunchExplorer",
                 "title": "View Results",
-                "category": "ShiftLeft"
+                "category": "ShiftLeft",
+                "icon": {
+                    "light": "./logo.svg",
+                    "dark": "./logo.svg"
+                }
             },
             {
                 "command": "extension.shiftleft.nextCodeFlowStep",
