--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Download ShiftLeft cli
+        run: |
+          curl https://cdn.shiftleft.io/download/sl > ${GITHUB_WORKSPACE}/sl && chmod a+rx ${GITHUB_WORKSPACE}/sl
       - name: Install Node.js
         uses: actions/setup-node@v1
         with:
@@ -14,6 +17,18 @@ jobs:
         run: |
           npm install -g vsce
           npm install
+      - name: Perform ShiftLeft NG SAST Analysis
+        run: ${GITHUB_WORKSPACE}/sl analyze --no-diagnostic --force --app SLVscodeExtn --tag branch=${GITHUB_REF} --js --cpg . -- --ts --babel
+        env:
+          SHIFTLEFT_ORG_ID: ${{ secrets.SHIFTLEFT_ORG_ID }}
+          SHIFTLEFT_ACCESS_TOKEN: ${{ secrets.SHIFTLEFT_ACCESS_TOKEN }}
+      - name: Create status check
+        run: |
+          URL="https://www.shiftleft.io/violationlist/SLVscodeExtn?apps=SLVscodeExtn&isApp=1"
+          GH_CHECK_URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/check-runs"
+          curl -XPOST $GH_CHECK_URL -H "Authorization: Token ${GITHUB_TOKEN}" -H "accept: application/vnd.github.antiope-preview+json" -H "Content-Type: application/json" -d "{\"name\": \"ShiftLeft NG SAST\", \"head_sha\": \"${GITHUB_REF}\", \"external_id\": \"SLVscodeExtn\", \"details_url\": \"${URL}\", \"status\": \"completed\", \"conclusion\": \"action_required\", \"output\": {\"title\": \"ShiftLeft NG SAST Findings\", \"summary\": \"Visit ${URL} for the findings\"}}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create package
         run: |
           sh release.sh
