fix: revert product name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slscan",
+  "name": "shiftleft-scan",
   "displayName": "Security Scan",
   "description": "Scan is a free security audit tool for modern DevOps teams",
   "author": "ShiftLeft Inc",
