--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Scan is a free security audit tool for modern DevOps teams",
   "author": "ShiftLeft Inc",
   "license": "GPL-3.0-or-later",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "publisher": "ShiftLeftSecurity",
-  "homepage": "https://shiftleft.io",
+  "homepage": "https://slscan.io",
   "repository": {
     "type": "git",
     "url": "https://github.com/ShiftLeftSecurity/shiftleft-scan-vscode.git"
@@ -33,7 +33,6 @@
     "vscode": "^1.41.0"
   },
   "activationEvents": [
-    "onLanguage:json",
     "onCommand:extension.shiftleft.LaunchExplorer",
     "onCommand:extension.shiftleft.PerformScan",
     "workspaceContains:**/*.sarif",
@@ -93,11 +92,6 @@
           "type": "string",
           "default": "",
           "description": "ShiftLeft NextGen access token for cloud based scans. Visit https://www.shiftleft.io/register to signup."
-        },
-        "shiftleft-scan.disableTelemetry": {
-          "type": "boolean",
-          "default": false,
-          "description": "Disable scan telemetry. Telemetry is used for diagnostics and feature prioritization purposes."
         },
         "shiftleft-scan.scanMode": {
           "type": "string",
